; ModuleID = '/home/carl/AnghaBench/linux/drivers/ipack/extr_ipack.c_ipack_calc_crc1.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ipack/extr_ipack.c_ipack_calc_crc1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipack_device = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ipack_device*)* @ipack_calc_crc1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipack_calc_crc1(%struct.ipack_device* %0) #0 {
  %2 = alloca %struct.ipack_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ipack_device* %0, %struct.ipack_device** %2, align 8
  store i32 65535, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %29, %1
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.ipack_device*, %struct.ipack_device** %2, align 8
  %9 = getelementptr inbounds %struct.ipack_device, %struct.ipack_device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp ult i32 %7, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %6
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 11
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load %struct.ipack_device*, %struct.ipack_device** %2, align 8
  %17 = getelementptr inbounds %struct.ipack_device, %struct.ipack_device* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  br label %24

23:                                               ; preds = %12
  br label %24

24:                                               ; preds = %23, %15
  %25 = phi i32 [ %22, %15 ], [ 0, %23 ]
  store i32 %25, i32* %3, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @ipack_crc_byte(i32 %26, i32 %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %24
  %30 = load i32, i32* %5, align 4
  %31 = add i32 %30, 1
  store i32 %31, i32* %5, align 4
  br label %6

32:                                               ; preds = %6
  %33 = load i32, i32* %4, align 4
  %34 = xor i32 %33, -1
  store i32 %34, i32* %4, align 4
  %35 = load i32, i32* %4, align 4
  %36 = and i32 %35, 255
  ret i32 %36
}

declare dso_local i32 @ipack_crc_byte(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
